# REMU

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  TODO.md  common.mk  design.mk  emuutil.cc  emuutil.h  framework.mk  memo.md  models.md  recheck.sh  recheck.tcl  remu-config.sh  transform.cc  yosys.conf
bitvector/: CMakeLists.txt  bitvector.cc  bitvector.h  bitvector_test.cc
common/: CMakeLists.txt  bitvector.cc  checkpoint.cc  circuit.cc  emu_info.cc  emulib.cc  escape.cc  signal_info.cc  signal_trace.cc
common/include/: bitvector.h  checkpoint.h  circuit.h  emu_info.h  emu_utils.h  emulib.h  escape.h  signal_info.h  signal_trace.h
cosim/: CMakeLists.txt  cosim.cc  cosim.h  cosim.json  cosim.yml  cosim_vpi.cc
cosim/fastarray/: CMakeLists.txt  fastarray.h  fastarray_vpi.cc
cosim/libcosim/: CMakeLists.txt  cosim.cc  cosim.h
cosim/libcosim/lib/: cosim_bfm_vpi.c
cosim/libcosim/verilog/: cosim_bfm_axi_core.vh
cosim/verilog/: axi_sim_mem.v  axi_sim_mem_fast.v  cosim_bfm_axi.v  sim_top.v
cosim/vpi_utils/: CMakeLists.txt  vpi_utils.cc  vpi_utils.h
design/: Makefile
design/example_singlecycle/: emu_top.v  include.mk  mips_cpu.v
design/nutshell/: include.mk
design/picorv32/: axil_interconnect.v  baremetal.hex  emu_top.v  include.mk
design/rocket/: include.mk
driver/: CMakeLists.txt  Makefile  cmd.cc  controller.cc  controller.h  driver.c  driver.cc  driver.h  driver_axi.cc  driver_checkpoint.cc  driver_ctrl.cc  driver_main.cc  driver_model.cc  driver_signal.cc  driver_trigger.cc  emulator.h  event.cc  event.h  event_queue.h  hal.cc  hal.h  main.cc  object.h  perfmon.cc  perfmon.h  platform.h  rammodel.cc  rammodel.h  regdef.h  runtime_data.h  scheduler.cc  scheduler.h  sighandler.cc  sighandler.h  uart.cc  uart.h  uma.cc  uma.h  uma_cdma.cc  uma_cdma.h  (+6 more)
emulib/: clock.v  rammodel.v  reset.v  trigger.v
emulib/common/: axi_register_slice.v  axi_remap.v  axil_1x2_crossbar.v  axis_width_converter.v  axis_width_downsizer.v  axis_width_upsizer.v  deserializer.v  fifo.v  latency_pipe.v  pipe_egress.v  pipe_ingress.v  pipeline_skid_buffer.v  rammodel_frontend.v  rammodel_tm_fixed.v  rammodel_tracker.v  ready_valid_arb.v  ready_valid_arbiter.v  ready_valid_decouple.v  ready_valid_fifo.v  ready_valid_fork.v  ready_valid_gate.v  ready_valid_join.v  ready_valid_mux.v  register_slice.v  reset_token_handler.v  serializer.v  simple_dma.v  twoway_valid_ready_logger.v
emulib/cosim/: axi_interconnect_wrap_2x1.v  cosim_bfm.v
emulib/fpga/: axi_trace_encoder.v  clock.v  clock_imp.v  data_sink.v  data_source.v  dmamodel_backend.v  pipe_egress_imp.v  pipe_ingress_imp.v  putchar.v  rammodel.v  rammodel_backend.v  rammodel_decoder_a.v  rammodel_encoder_a.v  rammodel_encoder_b.v  rammodel_encoder_r.v  rammodel_encoder_w.v  rammodel_req_guard.v  rammodel_state_lsu.v  reset.v  reset_imp.v  trace.v  trace_port_imp.v  trigger.v  trigger_imp.v  uart_rx_tx_imp.v
emulib/include/: axi.vh  axi_a.vh  axi_custom.vh  emu_csr.vh  gcd_lcm.vh
emulib/model/: CommandBusMonitor.v  DownCounter.v  FIFOMASModel.v  README.md  RankPowerMonitor.v  UnifiedFIFOXactionScheduler.v  axi_register_slice.v  axi_remap.v  axi_stall.v  clock.v  emulib_rammodel_FIFOMAS.v  fifo.v  putchar.v  rammodel.v  rammodel_backend.v  rammodel_decoder_a.v  rammodel_decoder_b.v  rammodel_decoder_r.v  rammodel_decoder_w.v  rammodel_encoder_a.v  rammodel_encoder_b.v  (+23 more)
exchange/: CMakeLists.txt  checkpoint.cc  circuit_info.cc  escape.cc
exchange/include/: checkpoint.h  circuit_info.h  emu_config.h
fpga/: emu_csr.vh  emu_system.v  emu_top.v  include.mk
host/: __init__.py  __main__.py  checkpoint.py  config.py  emulator.py  monitor.py
lib/: clock.v  reset.v
monitor/: Makefile  __init__.py  __main__.py  checkpoint.py  control.c  control.h  control.py  devmem.py  emulator.h  emulator.py  monitor.c  monitor.py  physmap.c  physmap.h  platform.py
replay/: CMakeLists.txt  fifo.cc  main.cc  model.h  rammodel.cc  rammodel.h  replay_ivl.cc  replay_ivl.h
replay/core/: bitvector.cc  checkpoint.cc  circuit.cc  loader.cc
replay/include/: bitvector.h  checkpoint.h  circuit.h  loader.h  model.h  rammodel.h  replay_ivl.h  replay_util.h  replay_vpi.h
replay/model/: fifo.cc  rammodel.cc
replay/tests/: bitvector_test.cc
replay/tools/: scdump.cc
replay/vpi/: main.cc  replay_ivl.cc  replay_vpi.cc  vpi_loader.cc
scripts/: cpedit.py  local_install.sh  transform.tcl
sim/: ClockGate.v  clock_gate.v  reconstruct.v  top.v
test/: Makefile  sim.v  test.v
tests/: Makefile  check_cocotb_result.py  common.mk  list.txt  run_tests.py
tokenizer/: CMakeLists.txt  tokenizer.cc  tokenizer.h
tools/: CMakeLists.txt
tracebackend/: .gitignore  CMakeLists.txt  Makefile  README.md
tracebackend/src/: CMakeLists.txt  TraceBackend.cpp  TraceBase.cpp  TraceBatch.cpp  TraceConfig.cpp
tracebackend/src/include/: TraceBase.hpp  utils.hpp
tracebackend/tests/: BackendGen.cpp  BackendTest.cpp  BatchGen.cpp  BatchTest.cpp  CMakeLists.txt  TraceBatchTest.cpp  Waver.h
tracebackend/tests/include/: TracePortRef.hpp  axi4ref.hpp  common.hpp  macro.hpp
transform/: CMakeLists.txt  ClockTransform.cc  IdentifySyncReadMem.cc  InsertScanchain.cc  Makefile  PlatformTransform.cc  PortTransform.cc  TargetTransform.cc  attr.cc  attr.h  attr.inc  axi.cc  axi.h  clock.cc  clock.h  combdeps.cc  combdeps.h  dag.h  database.cc  database.h  design_info.h  designtools.cc  designtools.h  emu.h  emu_analyze_model.cc  emu_attr_process.cc  emu_check.cc  emu_database.cc  emu_extract_mem.cc  emu_fame_transform.cc  emu_fast_opt.cc  emu_fixup_driver.cc  emu_fixup_port_conn.cc  emu_handle_directive.cc  emu_insert_scanchain.cc  emu_instrument.cc  emu_integrate_system.cc  emu_interface.cc  emu_keep_top.cc  emu_lint.cc  (+43 more)
vpi/: CMakeLists.txt  loader.cc  loader.h  main.cc  rammodel.cc  rammodel.h  rammodel_vpi.cc  replay.h  replay_util.h  replay_vpi.cc  replay_vpi.h  scdump.cc  vpi_loader.cc  vpi_loader.h
vpi/bitvector/: CMakeLists.txt  bitvector.cc  bitvector.h  bitvector_test.cc
vpi_utils/: vpi_utils.cc  vpi_utils.h
workload/: Makefile
(+306 files in other folders)
